No Escorts bug fix + viewRidePats filter to localStorage

--- a/Road to Recovery/pages/patientForm.html
+++ b/Road to Recovery/pages/patientForm.html
@@ -557,7 +557,7 @@
                 url: "WebService.asmx/getPatientEscorted",
                 contentType: "application/json; charset=utf-8",
                 type: "POST",
-                data: JSON.stringify({ displayName: patientName }),
+                data: JSON.stringify({ displayName: patientName, caller:"patientForm"}),
                 success: function (data) {
                     var arr_escorts = JSON.parse(data.d);
                     //GENERAL.VOLUNTEERS.setvolunteersList(arr_volunteers);
