--- a/Road to Recovery/pages/escortedForm.html
+++ b/Road to Recovery/pages/escortedForm.html
@@ -413,7 +413,7 @@
                         </li>
                         <li>
                             <a href="viewRidePats.html" class="waves-effect waves-primary">
-                                <i class="md md-today"></i><span> ניהול הסעות</span>
+                                <i class="md md-today"></i><span> רישום הסעות</span>
                             </a>
                         </li>
                     </ul>
@@ -749,7 +749,7 @@
                 }
             }
             if (!CityExists) {
-                alert("עליכם לבחור יישוב מתוך הרשימה");
+                alert("יש לבחור יישוב מתוך הרשימה");
             }
 
 
@@ -783,13 +783,13 @@
             var gender = $("#gender").val();
             if (gender == "בחר") {
                 gender = false
-                alert("עליכם לבחור מין מתוך הרשימה");
+                alert("יש לבחור מין מתוך הרשימה");
             }
 
             var contactType = $("#contactType").val();
             if (contactType == "בחר") {
                 relationship = false
-                alert("עליכם לבחור סוג קרבה מתוך הרשימה");
+                alert("יש לבחור סוג קרבה מתוך הרשימה");
             }
 
 
