--- a/Road to Recovery/pages/login.html
+++ b/Road to Recovery/pages/login.html
@@ -100,7 +100,7 @@
                 </div>
                 <div class="form-group">
                     <div class="col-xs-12">
-                        <input id="password" name="password" class="form-control" type="password" placeholder="סיסמה">
+                        <input id="password" name="password" class="form-control" type="password" placeholder="סיסמא">
                         <i class="md md-vpn-key form-control-feedback l-h-34"></i>
                     </div>
                 </div>
