--- a/Road to Recovery/pages/viewPatient.html
+++ b/Road to Recovery/pages/viewPatient.html
@@ -245,7 +245,7 @@
                         </li>
                         <li>
                             <a href="viewRidePats.html" class="waves-effect waves-primary">
-                                <i class="md md-today"></i><span> ניהול הסעות</span>
+                                <i class="md md-today"></i><span> רישום הסעות</span>
                             </a>
                         </li>
 
@@ -311,8 +311,8 @@
                                             <th>מחסום</th>
                                             <th>בית חולים</th>
                                             <!--<th>תאריך לידה</th>-->
-                                            <th>כלי עזר</th>
-                                            <th>אפשרויות</th>
+                                            <th>ציוד נלווה</th>
+                                            <th>פעולות</th>
                                         </tr>
                                     </thead>
                                     <tbody></tbody>
