--- a/Road to Recovery/pages/viewRidePats.html
+++ b/Road to Recovery/pages/viewRidePats.html
@@ -432,7 +432,7 @@
                         </li>
                         <li>
                             <a href="viewRidePats.html" class="waves-effect waves-primary">
-                                <i class="md md-today"></i><span> ניהול הסעות</span>
+                                <i class="md md-today"></i><span> רישום הסעות</span>
                             </a>
                         </li>
 
@@ -459,9 +459,9 @@
                             <div class="page-title-box">
                                 <ol class="breadcrumb pull-right">
 
-                                    <li class="active">ניהול הסעות חולים</li>
+                                    <li class="active">רישום הסעות חולים</li>
                                 </ol>
-                                <h4 class="page-title">ניהול הסעות חולים&nbsp&nbsp<i class="md md-recent-actors"></i></h4>
+                                <h4 class="page-title">רישום הסעות חולים&nbsp&nbsp<i class="md md-recent-actors"></i></h4>
                             </div>
                         </div>
                     </div>
@@ -516,13 +516,13 @@
                                     <thead>
                                         <tr>
                                             <!--<th>מספר הסעה</th>-->
-                                            <th>שם החולה</th>
+                                            <th>החולה</th>
                                             <th>מוצא</th>
                                             <th>יעד</th>
                                             <th>תאריך ושעה</th>
                                             <th>נהגים בנסיעה</th>
                                             <th>רכז</th>
-                                            <th>אפשרויות</th>
+                                            <th>פעולות</th>
                                         </tr>
 
                                     </thead>
