--- a/Road to Recovery/pages/ridePatForm.html
+++ b/Road to Recovery/pages/ridePatForm.html
@@ -270,22 +270,22 @@
                 // Messages for form validation
                 messages: {
                     dateRide: {
-                        required: "עליכם להזין תאריך"
+                        required: "יש להכניס תאריך"
                     },
                     pat: {
-                        required: "עליכם לבחור חולה"
+                        required: "יש לבחור חולה"
                     },
                     patArabic: {
                         required: "يجب عليك اختيار مريض"
                     },
                     Origin: {
-                        required: "עליכם לבחור מוצא"
+                        required: "יש לבחור מוצא"
                     },
                     Destination: {
-                        required: "עליכם לבחור יעד"
+                        required: "יש לבחור יעד"
                     },
                     coordinator: {
-                        required: "עליכם לבחור רכז אחראי"
+                        required: "יש לבחור רכז אחראי"
                     },
                 },
 
@@ -798,7 +798,7 @@
             }
 
             if (!patientExists) {
-                alert("עליכם לבחור חולה מתוך הרשימה");
+                alert("יש לבחור חולה מתוך הרשימה");
             }
 
             if (!patientAExists) {
@@ -808,13 +808,13 @@
             var Origin = $("#Origin").val();
             if (Origin == "בחר מוצא") {
                 Origin = false
-                alert("עליכם לבחור מוצא מתוך הרשימה");
+                alert("יש לבחור מוצא מתוך הרשימה");
             }
 
             var Destination = $("#Destination").val();
             if (Destination == "בחר יעד") {
                 Dest = false;
-                alert("עליכם לבחור יעד מתוך הרשימה");
+                alert("יש לבחור יעד מתוך הרשימה");
             }
 
             var Date = $("#dateRide").val();
@@ -1176,7 +1176,7 @@
                         </li>
                         <li>
                             <a href="viewRidePats.html" class="waves-effect waves-primary">
-                                <i class="md md-today"></i><span> ניהול הסעות</span>
+                                <i class="md md-today"></i><span> רישום הסעות</span>
                             </a>
                         </li>
 
@@ -1201,7 +1201,7 @@
                         <div class="col-sm-12">
                             <div class="page-title-box">
                                 <ol class="breadcrumb pull-right">
-                                    <li><a href="viewVolunteer.html">ניהול הסעות חולים</a></li>
+                                    <li><a href="viewRidePats.html">רישום הסעות</a></li>
                                     <li class="active">הסעת חולה</li>
                                 </ol>
                                 <h4 class="page-title">הסעת חולה&nbsp&nbsp<i class="md md-recent-actors"></i></h4>
