--- a/Road to Recovery/pages/viewVolunteer.html
+++ b/Road to Recovery/pages/viewVolunteer.html
@@ -8,7 +8,7 @@
 
     <link rel="shortcut icon" href="assets/images/favicon_1.ico">
 
-    <title>לקוחות</title>
+    <title>פרטי מתנדב/ת</title>
     
     <style type="text/css">
         .dt-body-left{text-align:left;}
@@ -283,7 +283,7 @@
                         </li>
                         <li>
                             <a href="viewRidePats.html" class="waves-effect waves-primary">
-                                <i class="md md-today"></i><span> ניהול הסעות</span>
+                                <i class="md md-today"></i><span> רישום הסעות</span>
                             </a>
                         </li>
 
@@ -352,13 +352,13 @@
                                 <table id="datatable-buttons" class="table table-striped table-bordered">
                                     <thead>
                                         <tr>
-                                            <th>שם מתנדב/ת</th>
+                                            <th>המתנדב/ת</th>
                                             <th>סוג משתמש/ת</th>
                                             <th>טלפון</th>
                                             <th>טלפון נוסף</th>
                                             <th>יישוב</th>
                                             <th>Email</th>
-                                            <th>אפשרויות</th>     
+                                            <th>פעולות</th>     
                                         </tr>
                                     </thead>
                                     <tbody></tbody>
