Added manageRides to Menu

--- a/Road to Recovery/pages/volunteerForm.html
+++ b/Road to Recovery/pages/volunteerForm.html
@@ -584,6 +584,12 @@
                                 <i class="md md-today"></i><span>רישום הסעות</span>
                             </a>
                         </li>
+
+                        <li>
+                            <a href="manageRidePats.html" class="waves-effect waves-primary">
+                                <i class="md md-today"></i><span> ניהול הסעות</span>
+                            </a>
+                        </li>
                     </ul>
                     <div class="clearfix"></div>
                 </div>
