--- a/Road to Recovery/pages/ridePatForm.html
+++ b/Road to Recovery/pages/ridePatForm.html
@@ -1180,6 +1180,11 @@
                             </a>
                         </li>
 
+                        <li>
+                            <a href="manageRidePats.html" class="waves-effect waves-primary">
+                                <i class="md md-today"></i><span> ניהול הסעות</span>
+                            </a>
+                        </li>
                     </ul>
                     <div class="clearfix"></div>
                 </div>
