--- a/Road to Recovery/pages/viewPatient.html
+++ b/Road to Recovery/pages/viewPatient.html
@@ -249,6 +249,12 @@
                             </a>
                         </li>
 
+                        <li>
+                            <a href="manageRidePats.html" class="waves-effect waves-primary">
+                                <i class="md md-today"></i><span> ניהול הסעות</span>
+                            </a>
+                        </li>
+
                     </ul>
                     <div class="clearfix"></div>
                 </div>
